--- a/notebooks/coding/Intro to Python/14_Dictionaries.ipynb
+++ b/notebooks/coding/Intro to Python/14_Dictionaries.ipynb
@@ -6,11 +6,14 @@
    "source": [
     "(dictionaries)=\n",
     "# Dictionaries\n",
-    "``` {index} Dictionaries\n",
+    "``` {index} Dictionaries (python)\n",
     "```\n",
     "A dictionary is a Python data structure that can store data as key-value pairs. The syntax is:\n",
     "\n",
-    "    dict1 = {key1: value1, key2: value2, key3: value3, etc...}\n",
+    "```python\n",
+    "    dict1 = {key1: value1, key2: value2, key3: value3, ...}\n",
+    "```    \n",
+    "  \n",
     "Keys can be strings or numbers and values can be anything: strings, numbers, lists, arrays, etc. Keys must be unique - if you set it twice, the second value replaces the first."
    ]
   },
@@ -129,14 +132,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('Europe', 57), ('Asia', 58), ('Africa', 58), ('Antarctica', 5), ('North America', 43), ('South America', 14), ('Oceania', 27)]\n"
+      "[['Asia', 58], ['Europe', 57], ['Antarctica', 5], ['Africa', 58], ['Oceania', 27], ['North America', 43], ['South America', 14]]\n"
      ]
     }
    ],
@@ -145,22 +148,15 @@
     "\n",
     "df = read_csv('Data\\\\CountryContinent.csv')\n",
     "\n",
-    "continents = ('Europe','Asia','Africa','Antarctica','North America','South America','Oceania')\n",
-    "\n",
-    "res = []\n",
-    "\n",
-    "for i in continents:\n",
-    "    res.append((i,0))\n",
+    "continents = df['Continent_Name'].unique()  # list of continent names from the file\n",
+    "res = [[continent, 0] for continent in continents]  # initial list, not counted yet\n",
     "\n",
     "for index, row in df.iterrows():\n",
-    "\n",
     "    if row[\"Three_Letter_Country_Code\"] != \"nan\":\n",
     "\n",
     "        for j in range(len(res)):\n",
-    "\n",
-    "            if row[\"Continent_Name\"] == res[j][0]:\n",
-    "\n",
-    "                res[j] = (res[j][0],res[j][1]+1)\n",
+    "            if row[\"Continent_Name\"] == res[j][0]:  # find correct continent\n",
+    "                res[j][1] += 1  # increase country count by 1\n",
     "\n",
     "print(res)"
    ]
@@ -169,39 +165,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{admonition} Anwser\n",
+    "````{admonition} Answer\n",
     ":class: dropdown\n",
     "\n",
-    "    from pandas import read_csv\n",
+    "```python\n",
+    "from pandas import read_csv\n",
     "\n",
-    "    df = read_csv('Data\\\\CountryContinent.csv')\n",
+    "df = read_csv('Data\\\\CountryContinent.csv')\n",
+    "continents = df['Continent_Name'].unique()\n",
     "\n",
-    "    continents = ('Europe','Asia','Africa','Antarctica','North America','South America','Oceania')\n",
+    "res = {}\n",
+    "for i in continents:\n",
+    "    res[i] = 0\n",
+    "    \n",
+    "for index, row in df.iterrows():\n",
+    "    if row[\"Three_Letter_Country_Code\"] != \"nan\": \n",
+    "        res[row[\"Continent_Name\"]] += 1\n",
     "\n",
-    "    res = {} #change here\n",
+    "print(res)\n",
+    "```\n",
     "\n",
-    "    for i in continents:\n",
-    "        res[i] = 0\n",
-    "\n",
-    "\n",
-    "    for index, row in df.iterrows():\n",
-    "\n",
-    "        if row[\"Three_Letter_Country_Code\"] != \"nan\": \n",
-    "\n",
-    "            #change here\n",
-    "            \n",
-    "            res[row[\"Continent_Name\"]] +=1\n",
-    "            \n",
-    "    print(res)\n",
-    "```"
+    "````"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -224,5 +209,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
