--- a/notebooks/coding/Intro to Python/16_Sets.ipynb
+++ b/notebooks/coding/Intro to Python/16_Sets.ipynb
@@ -6,13 +6,16 @@
    "source": [
     "(sets)=\n",
     "# Sets\n",
-    "``` {index} Sets\n",
+    "``` {index} Sets (python)\n",
     "```\n",
     "Sets are a type of Python container that are equivalent to sets in maths. They can only contain one copy of a particular element and they are not ordered. They don't have indices or keys. Elements in a set can be of any type.\n",
     "\n",
     "Sets are defined with curly brackets:\n",
     "\n",
+    "```python\n",
     "    set1 = {variable1, variable2, variable3, etc...}\n",
+    "```\n",
+    "\n",
     "Sets only contain one copy of the same element, so even though we specify it twice, a set stores it once:"
    ]
   },
@@ -52,10 +55,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'banana', 'carrot', 'potato'}\n",
+      "{'carrot', 'banana', 'potato'}\n",
       "True\n",
       "None\n",
-      "{4, 5, 'potato', 'cucumber', 'carrot', 'banana'}\n",
+      "{4, 5, 'carrot', 'cucumber', 'banana', 'potato'}\n",
       "set()\n"
      ]
     }
@@ -82,23 +85,26 @@
     "(sets_exercises)=\n",
     "## Exercises\n",
     "----------\n",
-    "* **Define a function** which returns how many unique values are in a list.\n",
+    "* **Define a function** which returns how many unique values there are in a list.\n",
     "\n",
-    "**HINT**: use ```set()```"
+    "**HINT**: use `set()`"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{admonition} Anwser\n",
+    "```{admonition} Answer\n",
     ":class: dropdown\n",
     "\n",
-    "    def lenUniq(l):\n",
-    "        return len(set(l))\n",
+    "```python\n",
+    "def lenUniq(l):\n",
+    "    return len(set(l))\n",
     "\n",
-    "    print(lenUniq([1,2,3,3,3,4,4,5,5,5,5,5,7]))\n",
-    "```    "
+    "print(lenUniq([1,2,3,3,3,4,4,5,5,5,5,5,7]))\n",
+    "```    \n",
+    "\n",
+    "````"
    ]
   },
   {
@@ -108,26 +114,28 @@
     "-----------------\n",
     "* **Define a function** which calculates intersection of sets in a given list of sets.\n",
     "\n",
-    "**HINT**: Use the ```intersection()``` function"
+    "**HINT**: Use the `intersection()` function"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{admonition} Anwser\n",
+    "````{admonition} Answer\n",
     ":class: dropdown\n",
     "\n",
-    "    def interSets(sets):\n",
-    "    \n",
-    "        res = sets[0]\n",
-    "        for i in sets:\n",
-    "            res = res.intersection(i)\n",
-    "        return res\n",
+    "```python\n",
+    "def interSets(sets):\n",
     "\n",
-    "    print(interSets([set([1,2,3]),set([1,4,5]),set([0,4,1])]))\n",
-    "               \n",
-    "```"
+    "    res = sets[0]\n",
+    "    for i in sets:\n",
+    "        res = res.intersection(i)\n",
+    "    return res\n",
+    "\n",
+    "print(interSets([set([1,2,3]),set([1,4,5]),set([0,4,1])]))             \n",
+    "```\n",
+    "\n",
+    "````"
    ]
   },
   {
@@ -158,5 +166,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
