--- a/notebooks/coding/Intro to Python/3_If_statement.ipynb
+++ b/notebooks/coding/Intro to Python/3_If_statement.ipynb
@@ -5,20 +5,20 @@
    "metadata": {},
    "source": [
     "(if_statement)=\n",
-    "# If construct\n",
-    "``` {index} If statement\n",
-    "```\n",
+    "# If statement\n",
     "\n",
     "_If_ construct allows to create cases in the code based on conditions:\n",
     "\n",
-    "    if boolean:\n",
-    "        # Executue some code if boolean is True\n",
-    "    elif boolean2:\n",
-    "        # Execute some code only if boolean is False and boolean2 is True\n",
+    "```\n",
+    "    if condition:\n",
+    "        # Execute some code if condition is True\n",
+    "    elif condition2:\n",
+    "        # Execute some code only if condition is False and condition2 is True\n",
     "    else:\n",
-    "        # Execute some code only if boolean is False and boolean2 is False\n",
+    "        # Execute some code only if both condition and condition2 are False\n",
+    "```\n",
     "        \n",
-    "_elif_ and _else_ are optional blocks. Code inside each block needs to be indented.\n",
+    "`elif` and `else` are optional blocks. Code inside each block needs to be indented.\n",
     "\n",
     "## Example use"
    ]
@@ -61,27 +61,9 @@
     "\n",
     "---------------\n",
     "\n",
-    "* **Flow of control**: What is the difference between the output of the following code samples:\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "tags": [
-     "remove-output"
-    ]
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bar\n"
-     ]
-    }
-   ],
-   "source": [
+    "* **Flow control**: What is the difference between the output of the following code samples:\n",
+    "\n",
+    "```python\n",
     "a = 5\n",
     "\n",
     "if a < 5:\n",
@@ -90,27 +72,9 @@
     "    print(\"bar\")\n",
     "else:\n",
     "    print(\"boom\")\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "tags": [
-     "remove-output"
-    ]
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "foo\n"
-     ]
-    }
-   ],
-   "source": [
+    "```\n",
+    "\n",
+    "```python\n",
     "a = 4\n",
     "\n",
     "if a < 5:\n",
@@ -119,42 +83,24 @@
     "    print(\"bar\")\n",
     "else:\n",
     "    print(\"boom\")\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "tags": [
-     "remove-output"
-    ]
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "foo\n",
-      "boom\n"
-     ]
-    }
-   ],
-   "source": [
+    "```\n",
+    "\n",
+    "```python\n",
     "a = 4\n",
     "if a <5:\n",
     "    print(\"foo\")\n",
     "elif a == 5:\n",
     "    print(\"bar\")\n",
     "\n",
-    "print(\"boom\")"
+    "print(\"boom\") \n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{admonition} Anwser\n",
+    "```{admonition} Answer\n",
     ":class: dropdown\n",
     "\n",
     "First: \n",
@@ -169,6 +115,13 @@
     "\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -192,5 +145,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
