--- a/notebooks/coding/Intro to Python/8_Nested_lists.ipynb
+++ b/notebooks/coding/Intro to Python/8_Nested_lists.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "(nested_lists)=\n",
     "# Nested lists\n",
-    "``` {index} Lists: nested lists\n",
+    "``` {index} Nested lists (python)\n",
     "```\n",
     "Lists can contain elements which are also lists."
    ]
@@ -43,7 +43,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Above, we created a table with rows. Using _zip()_ function we can loop through two or more lists at the same time. With that we can create a table with columns:"
+    "Above, we created a table with rows. Using `zip()` function we can loop through two or more lists at the same time. With that we can create a table with columns:"
    ]
   },
   {
@@ -89,34 +89,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[321, 166, 180, 68, 346, 139, 451, 403, 467, 348]\n",
-      "[81, 22, 364, 380, 437, 89, 198, 148, 139, 125]\n",
-      "[467, 470, 182, 327, 261, 52, 486, 35, 380, 42]\n",
-      "[390, 245, 14, 21, 36, 193, 187, 53, 443, 157]\n",
-      "[396, 237, 487, 260, 316, 341, 352, 459, 422, 233]\n",
-      "[89, 142, 233, 237, 219, 318, 273, 458, 253, 342]\n",
-      "[6, 240, 80, 468, 61, 102, 272, 150, 484, 440]\n",
-      "[162, 49, 153, 481, 191, 216, 113, 17, 45, 131]\n",
-      "[47, 318, 465, 55, 174, 257, 338, 486, 180, 176]\n",
-      "[302, 361, 341, 344, 374, 413, 155, 307, 202, 368]\n"
+      "168 391 491 132 230 160 353 489 330 341\n",
+      "433 294 207 148 349 114 299 321 411 490\n",
+      "492 101 456 328 236 469 217 402 152 262\n",
+      "115 111 113 432 377 104 295 451 210 316\n",
+      "471 114 370 213 491 324 353 383 219 276\n",
+      "218 446 212 489 335 248 111 313 384 428\n",
+      "151 195 422 470 251 161 480 270 469 464\n",
+      "356 316 359 443 197 255 245 400 355 358\n",
+      "301 401 117 345 224 480 306 312 440 188\n",
+      "287 380 459 497 445 477 291 144 324 439\n"
      ]
     }
    ],
    "source": [
     "import random\n",
+    "random.seed(1)\n",
     "\n",
     "a = 10\n",
-    "i_map=[[random.randint(0,500) for i in range(a)] for j in range(a)]\n",
+    "i_map=[[random.randint(100,500) for i in range(a)] for j in range(a)]\n",
     "   \n",
     "for i in range(a):\n",
-    "    print(i_map[i])"
+    "    print(*i_map[i])"
    ]
   },
   {
@@ -138,33 +139,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{admonition} Anwser\n",
+    "````{admonition} Answer\n",
     ":class: dropdown\n",
     "\n",
+    "```python\n",
     "import random\n",
+    "random.seed(1)\n",
     "\n",
-    "    a = 10\n",
-    "    i_map=[[random.randint(0,500) for i in range(a)] for j in range(a)]\n",
+    "a = 10\n",
+    "i_map=[[random.randint(100,500) for i in range(a)] for j in range(a)]\n",
     "\n",
-    "    coords = []\n",
+    "coords = []\n",
     "\n",
-    "    #Scanning through the grid\n",
-    "    for i in range(1,a-1):\n",
-    "        for j in range(1,a-1):\n",
-    "        \n",
-    "        #Checking the peak condition\n",
-    "            success = True\n",
-    "            for x in range(i-1,i+2):\n",
-    "                for y in range(j-1,j+2):\n",
-    "                     if i_map[x][y] > i_map[i][j]:\n",
-    "                         success = False\n",
-    "            #Found a peak\n",
-    "            if success:\n",
-    "                coords.append([i,j])           \n",
-    "    print(coords)            \n",
+    "#Scanning through the grid\n",
+    "for i in range(1,a-1):\n",
+    "    for j in range(1,a-1):\n",
     "\n",
+    "    #Checking the peak condition\n",
+    "        success = True\n",
+    "        for x in range(i-1,i+2):\n",
+    "            for y in range(j-1,j+2):\n",
+    "                 if i_map[x][y] > i_map[i][j]:\n",
+    "                     success = False\n",
+    "        #Found a peak\n",
+    "        if success:\n",
+    "            coords.append([i,j])           \n",
+    "print(coords)            \n",
+    "```\n",
     "\n",
-    "```"
+    "````"
    ]
   }
  ],
@@ -188,5 +191,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
