--- a/notebooks/coding/Intro to Python/11_Functions.ipynb
+++ b/notebooks/coding/Intro to Python/11_Functions.ipynb
@@ -6,13 +6,15 @@
    "source": [
     "(functions_python)=\n",
     "# Creating custom functions\n",
-    "``` {index} Creating functions\n",
+    "``` {index} Creating functions (python)\n",
     "```\n",
     "Functions in Python are blocks of code that will only be executed when called. They look like this:\n",
     "\n",
+    "```python\n",
     "    def function_name(arg1, arg2, ...):\n",
     "        # some code to execute\n",
-    "        return # return some variables, optional\n",
+    "        return  # return some variables, optional\n",
+    "```\n",
     "\n",
     "Function names should be descriptive. The arguments are separated by commas and will become local variables within the function. Any object, and any number of objects, can be returned from a function.\n",
     "\n",
@@ -21,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -39,12 +41,10 @@
     "b = 2\n",
     "\n",
     "# Create a function\n",
-    "\n",
     "def subtract_numbers(a, b):\n",
-    "    return \"%g - %g = %g\" % (a, b, a-b)\n",
+    "    return f\"{a} - {b} = {a-b}\"\n",
     "\n",
-    "# Call created function\n",
-    "\n",
+    "# Call the function\n",
     "print(subtract_numbers(a, b))\n",
     "print(subtract_numbers(17,5))\n",
     "print(subtract_numbers(9, 28))"
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -96,81 +96,76 @@
     "(functions_exercises) =\n",
     "## Exercises\n",
     "-------\n",
-    "* **Immutable vs Mutable** Functions can either change the objects (variables) passed to them. Everything depends if an object is mutable. Compare the behaviour of the two functions"
+    "* **Immutable vs Mutable** Functions can change the objects (variables) passed to them. Everything depends if an object is mutable. Compare the behaviour of the two functions below, where the one which changes the list is an example of an [*in-place algorithm*](https://en.wikipedia.org/wiki/In-place_algorithm):"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "int Before: 1\n",
-      "int After: 1\n",
-      "list Before: [1, 2, 3]\n",
-      "list After: [2, 4, 6]\n"
+      "Original list: [1, 2, 3]\n",
+      "double_list1: [1, 2, 3]\n",
+      "double_list2: [2, 4, 6]\n"
      ]
     }
    ],
    "source": [
-    "def listTimesTwo(l):\n",
-    "    \n",
+    "def double_list1(l):\n",
+    "    for element in l:\n",
+    "        element *= 2\n",
+    "\n",
+    "def double_list2(l):\n",
     "    for i in range(len(l)):\n",
-    "        l[i]*=2\n",
+    "        l[i] *= 2\n",
     "\n",
-    "def intTimesTwo(a):\n",
-    "    a *= 2\n",
     "    \n",
-    "a = 1\n",
-    "\n",
-    "print(\"int Before: \" + str(a))\n",
-    "\n",
-    "intTimesTwo(a)\n",
-    "\n",
-    "print(\"int After: \" + str(a))\n",
-    "\n",
     "l = [1,2,3]\n",
+    "print(\"Original list:\", l)\n",
     "\n",
-    "print(\"list Before: \" + str(l))\n",
+    "double_list1(l)\n",
+    "print(\"double_list1:\", l)\n",
     "\n",
-    "listTimesTwo(l)\n",
-    "\n",
-    "print(\"list After: \" + str(l))"
+    "double_list2(l)\n",
+    "print(\"double_list2:\", l)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us have some fun with mutability. Define a function which takes a list and doubles the elements at the even indicies and negates the ones at odd indicies. Test it with your input.\n",
+    "Let us have some fun with mutability. Define a function which takes a list and doubles the elements at the even indices and negates the ones at odd indices. Test it with your input.\n",
     "\n",
-    "**HINT** use the ```for i in range(len(l)):``` structure of the for loop, a different one might not mutate the list."
+    "**HINT** use the `for i in range(len(l)):` structure of the for loop, a different one might not mutate the list."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{admonition} Anwser\n",
+    "````{admonition} Answer\n",
     ":class: dropdown\n",
     "    \n",
-    "    def funnyFunc(l):\n",
+    "```python    \n",
+    "def funnyFunc(l):\n",
+    "    for i in range(len(l)):\n",
     "\n",
-    "        for i in range(len(l)):\n",
+    "        if i%2==0:\n",
+    "            l[i]*=2\n",
+    "        else:\n",
+    "            l[i]*=(-1)\n",
     "\n",
-    "            if i%2==0:\n",
-    "                l[i]*=2\n",
-    "            else:\n",
-    "                l[i]*=(-1)\n",
-    "\n",
-    "        return l\n",
+    "    return l\n",
     "\n",
     "\n",
-    "    print(funnyFunc([1,2,3,4,7,4,3]))\n",
-    "```"
+    "print(funnyFunc([1,2,3,4,7,4,3]))\n",
+    "```\n",
+    "\n",
+    "````"
    ]
   },
   {
@@ -178,79 +173,81 @@
    "metadata": {},
    "source": [
     "----------\n",
-    "* **Simple Search** Define a function which checks if an element is present in a list and return a bollean value depending on a result. The signature should be as follows:\n",
-    "\n",
-    "```def simpleSearch(l,a):```\n",
-    "\n"
+    "* **Simple Search** Define a function which checks if an element is present in a list and return a boolean value depending on the result. The signature should be `def simpleSearch(l, a):`"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{admonition} Anwser\n",
+    "````{admonition} Answer\n",
     ":class: dropdown\n",
     "\n",
-    "    def simpleSearch(l,a):\n",
+    "```python\n",
+    "def simpleSearch(l,a):\n",
+    "    for i in l:\n",
+    "        if a == i:\n",
+    "            return True\n",
     "\n",
-    "        for i in l:\n",
-    "            if a == i:\n",
-    "                return True\n",
+    "    return False\n",
     "\n",
-    "        return False\n",
     "\n",
-    "    print(simpleSearch([1,2,3],5))\n",
-    "    print(simpleSearch([\"Boo\", \"Foo\"], \"Moo\"))\n",
-    "    print(simpleSearch([True, True],False))\n",
-    "    print(simpleSearch([1.,1.],1))\n",
+    "print(simpleSearch([1,2,3],5))\n",
+    "print(simpleSearch([\"Boo\", \"Foo\"], \"Moo\"))\n",
+    "print(simpleSearch([True, True],False))\n",
+    "print(simpleSearch([1.,1.],1))\n",
+    "```\n",
     "\n",
-    "```"
+    "````"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* **Ah..Interns**: Of course Professor Earth agreed to employ Jenny for the summer internship about temparature analysis. Unfortunately she made a little mistake and now the machine reads temperature in the reverse order. \n",
+    "* **Ah..Interns**: Of course Professor Earth agreed to employ Jenny for the summer internship about temperature analysis. Unfortunately she made a little mistake and now the machine reads the digits of each number in the reverse order. \n",
     "\n",
+    "```python\n",
     "        temp = ['009','679','568','444']\n",
+    "```\n",
     "        \n",
-    "Jenny produced so many measurements that she would not be able to change them manually. You have to help her! In addition she needs to provide a function which will compute the average of temperature reads from a transformed list.\n",
-    "\n",
-    "        def avgList(l): \n",
-    "        \n",
-    "Jenny needs you!\n",
-    "        "
+    "Jenny produced so many measurements that she would not be able to change them manually. You have to help her! In addition she needs to provide a function `avgList(l)` which will compute the average of temperature reads from a transformed list. Jenny needs you!    "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{admonition} Anwser\n",
+    "````{admonition} Answer\n",
     ":class: dropdown\n",
     "\n",
-    "    def revNums(l):\n",
+    "```python\n",
+    "def revNums(l):\n",
+    "    for i in range(len(l)):\n",
+    "        l[i] = int(l[i][::-1])\n",
     "\n",
-    "        for i in range(len(l)):\n",
-    "            l[i] = int(l[i][::-1])\n",
-    "\n",
-    "        return l\n",
-    "\n",
-    "\n",
-    "    def avgList(l):\n",
-    "\n",
-    "        return sum(l)/len(l)\n",
+    "    return l\n",
     "\n",
     "\n",
-    "    temp = ['009','679','568','444']\n",
+    "def avgList(l):\n",
+    "    return sum(l)/len(l)\n",
     "\n",
-    "    print(revNums(temp))\n",
     "\n",
-    "    print(avgList(temp))\n",
+    "temp = ['009','679','568','444']\n",
+    "\n",
+    "print(revNums(temp))\n",
+    "print(avgList(temp))\n",
+    "```\n",
     "               \n",
-    "```"
+    "````"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -273,5 +270,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
