--- a/notebooks/coding/Intro to Python/13_File_handling.ipynb
+++ b/notebooks/coding/Intro to Python/13_File_handling.ipynb
@@ -5,12 +5,12 @@
    "metadata": {},
    "source": [
     "(file_handling)=\n",
-    "# File handling in Python\n",
+    "# File handling\n",
     "``` {index} File handling\n",
     "```\n",
     "Suppose we have a text file like below, from which we would like to extract temperature and density data:\n",
     "\n",
-    "$$\n",
+    "```\n",
     "# Density of air at different temperatures, at 1 atm pressure\n",
     "# Column 1: temperature in Celsius degrees\n",
     "# Column 2: density in kg/m^3\n",
@@ -22,8 +22,9 @@
     " 37.0   993.3316\n",
     " 50.0   988.04\n",
     "100.0   958.3665\n",
+    "\n",
     "# Source: Wikipedia (keyword Density)\n",
-    "$$"
+    "```"
    ]
   },
   {
@@ -73,33 +74,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The lines variable in the above example is a list which contains our lines with numbers, but they are stored as a string - they are not recognised as numbers at this point. Note that the temperature and density arrays are already initialised as arrays of specific length, rather than empty lists which we will then append numbers to. It is good practice to initalise arrays like this when we know exactly how many elements our final array will have. The for loop is used to cycle through all elements of our data list. Each ith element is a string, which we split into a new list with the same number of elements as the number of values that are separated by whitespaces in the line - in our case 2. Finally we can assign those values to elements in the temperature and density arrays, but first we converted them from a string to a float.\n",
+    "The lines variable in the above example is a list which contains our lines with numbers, but they are stored as a string - they are not recognised as numbers at this point. Note that the temperature and density arrays are already initialised as arrays of specific length, rather than empty lists which we will then append numbers to. It is good practice to initalise arrays like this when we know exactly how many elements our final array will have. The for loop is used to cycle through all elements of our data list. Each i-th element is a string, which we split into a new list with the same number of elements as the number of values that are separated by whitespaces in the line - in our case 2. Finally we can assign those values to elements in the temperature and density arrays, but first we converted them from a string to a float.\n",
     "\n",
-    "The below example shows how we could write the data into a text file with, for example here, comma separated values."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'temp' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-df63d54041bf>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'output.txt'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'w'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mfile\u001b[0m\u001b[1;33m:\u001b[0m  \u001b[1;31m# w for write\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[0mfile\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'# Temperature and density data\\n'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m     \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtemp\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m         \u001b[0mfile\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'{},{}\\n'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtemp\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdensity\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'temp' is not defined"
-     ]
-    }
-   ],
-   "source": [
+    "The below example shows how we could write the data into a text file with, for example here, comma separated values.\n",
+    "\n",
+    "```python\n",
     "with open('output.txt', 'w') as file:  # w for write\n",
     "    file.write('# Temperature and density data\\n')\n",
     "    for i in range(len(temp)):\n",
-    "        file.write('{},{}\\n'.format(temp[i], density[i]))"
+    "        file.write(f'{temp[i]},{density[i]}\\n')\n",
+    "```"
    ]
   },
   {
@@ -110,11 +94,11 @@
     "## NumPy\n",
     "\n",
     "NumPy's [**genfromtxt**](https://numpy.org/doc/1.18/reference/generated/numpy.genfromtxt.html) (generate from text) function provides full control over the file which we are trying to open. It initialises a numpy array from the data. Some of the parameters include:\n",
-    "    - dtype: set a data type. If not set, determines the data type automatically for each column\n",
-    "    - comments: skips every line starting with a string that is set here. '#' by default.\n",
-    "    - skip_header: number of lines to skip at the beginning of the file\n",
-    "    - skip_footer: number of lines to skip at the end of the file\n",
-    "    - delimiter: the string used to separate values. Any whitespaces, by default.\n",
+    "    - `dtype`: set a data type. If not set, determines the data type automatically for each column\n",
+    "    - `comments`: skips every line starting with a string that is set here. '#' by default.\n",
+    "    - `skip_header`: number of lines to skip at the beginning of the file\n",
+    "    - `skip_footer`: number of lines to skip at the end of the file\n",
+    "    - `delimiter`: the string used to separate values. Any whitespaces, by default.\n",
     "    \n",
     "For our file, we do not have to change anything since comments are marked by a # at the beginning of the line and the values are separated by whitespaces."
    ]
@@ -233,50 +217,48 @@
     "(file_handling_exercises)=\n",
     "## Exercises\n",
     "--------\n",
-    "* **Temperature** You are given a table with average temperature in different countries in the World. Open the file and find the countries ending with *stan* (like Turkmeni*stan*) and save their average temperatures in a separate file). Columnts are ```\\t``` separated.\n",
+    "* **Temperature** You are given a table with average temperature in different countries in the World. Open the file and find the countries ending with *stan* (like Turkmeni*stan*) and save their average temperatures in a separate file). Columns are `\\t` separated.\n",
     "\n",
-    "The file can be found at ```'Data\\\\TempData.txt'```\n",
+    "The file can be found at `'Data\\\\TempData.txt'`\n",
     "\n",
-    "**HINT**: Structurize the data as a list of tuples"
+    "**HINT**: Structure the data as a list of tuples."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{admonition} Anwser\n",
+    "```{admonition} Answer\n",
     ":class: dropdown\n",
     "\n",
-    "\n",
-    "    def isStan(country):\n",
-    "\n",
-    "        if len(country) < 4:\n",
-    "            return False\n",
-    "        else:\n",
-    "            return country[-4::] == \"stan\"\n",
-    "\n",
+    "```python\n",
+    "def isStan(country):\n",
+    "    if len(country) < 4:\n",
+    "        return False\n",
+    "    else:\n",
+    "        return country[-4::] == \"stan\"  # True or False\n",
     "\n",
     "\n",
-    "    with open('Data\\\\TempData.txt', 'r') as file:  \n",
+    "with open('Data\\\\TempData.txt', 'r') as file:  \n",
+    "    lines = file.readlines()\n",
     "\n",
-    "        lines = file.readlines()\n",
+    "    nameTemp =[]\n",
     "\n",
-    "        nameTemp =[]\n",
+    "    res = 0\n",
+    "    stan_countries = 0\n",
     "\n",
-    "        res = 0\n",
-    "        stan_countries = 0\n",
+    "    for i in range(len(lines)):\n",
+    "        values = lines[i].split('\\t')\n",
+    "        nameTemp.append((values[0].strip(), float(values[1])))\n",
     "\n",
-    "        for i in range(len(lines)):\n",
-    "            values = lines[i].split('\\t')\n",
-    "            nameTemp.append((values[0].strip(), float(values[1])))\n",
+    "        if(isStan(nameTemp[i][0])):  # if True\n",
+    "            res += nameTemp[i][1]\n",
+    "            stan_countries += 1\n",
     "\n",
-    "            if(isStan(nameTemp[i][0])):\n",
-    "                res+= nameTemp[i][1]\n",
-    "                stan_countries+=1\n",
+    "print (res/stan_countries)\n",
+    "```\n",
     "\n",
-    "\n",
-    "        print (res/stan_countries)\n",
-    "```"
+    "````"
    ]
   },
   {
@@ -286,26 +268,27 @@
     "--------------------\n",
     "* **Hottest countires**: Using the same file as in the exercise before, via Numpy, find the countries with the average temperature above 27.\n",
     "\n",
-    "**HINT**: Set ```dtype=None```, remember about delimiters."
+    "**HINT**: Set `dtype=['U20', float]`, remember about delimiters."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{admonition} Anwser\n",
+    "```{admonition} Answer\n",
     ":class: dropdown\n",
     "\n",
-    "    import numpy as np\n",
+    "```python\n",
+    "import numpy as np\n",
     "\n",
-    "    data = np.genfromtxt('Data\\\\TempData.txt', delimiter='\\t', dtype=None)\n",
+    "data = np.genfromtxt('Data\\\\TempData.txt', delimiter='\\t', dtype=['U20', float])\n",
     "\n",
-    "    for i in data:\n",
+    "for i in data:\n",
+    "    if i[1] > 27:\n",
+    "        print(i[0])   \n",
+    "```\n",
     "\n",
-    "        if i[1] > 27:\n",
-    "            print(i)\n",
-    "            \n",
-    "```"
+    "````"
    ]
   },
   {
@@ -313,54 +296,40 @@
    "metadata": {},
    "source": [
     "-----------------------\n",
-    "* **Countires per continent** Construct a list of tuples showing how many countires (independent regions) are there in a particulair continent. Consider only the countries with a ```Three_Letter_Country_Code``` value. Use the Pandas library.\n",
+    "* **Countries per continent** Construct a list showing how many countries and independent regions there are on a particular continent. Consider only the countries with a `Three_Letter_Country_Code` value. Use the Pandas library.\n",
     "\n",
-    "The file can be found at:\n",
+    "The file can be found at `Data\\\\CountryContinent.csv`.\n",
     "\n",
-    "```Data\\\\CountryContinent.csv```\n",
-    "\n",
-    "\n",
-    "**HINT**: Use the ```for index, row in df.iterrows():``` structure of the ```for``` loop."
+    "**HINT**: Use the `for index, row in df.iterrows():` structure of the `for` loop. The final result should look something like this: `[['Asia', 58], ['Europe', 57], ['Antarctica', 5], ['Africa', 58], ['Oceania', 27], ['North America', 43], ['South America', 14]]`"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{admonition} Anwser\n",
+    "```{admonition} Answer\n",
     ":class: dropdown\n",
     "\n",
-    "    from pandas import read_csv\n",
+    "```python\n",
+    "from pandas import read_csv\n",
     "\n",
-    "    df = read_csv('Data\\\\CountryContinent.csv')\n",
+    "df = read_csv('Data\\\\CountryContinent.csv')\n",
     "\n",
-    "    continents = ('Europe','Asia','Africa','Antarctica','North America','South America','Oceania')\n",
+    "continents = df['Continent_Name'].unique()  # list of continent names from the file\n",
+    "res = [[continent, 0] for continent in continents]  # initial list, not counted yet\n",
     "\n",
-    "    res = []\n",
+    "for index, row in df.iterrows():\n",
+    "    if row[\"Three_Letter_Country_Code\"] != \"nan\":\n",
     "\n",
-    "    for i in continents:\n",
-    "        res.append((i,0))\n",
+    "        for j in range(len(res)):\n",
+    "            if row[\"Continent_Name\"] == res[j][0]:  # find correct continent\n",
+    "                res[j][1] += 1  # increase country count by 1\n",
     "\n",
-    "    for index, row in df.iterrows():\n",
+    "print(res)\n",
+    "```\n",
     "\n",
-    "        if row[\"Three_Letter_Country_Code\"] != \"nan\":\n",
-    "\n",
-    "            for j in range(len(res)):\n",
-    "\n",
-    "                if row[\"Continent_Name\"] == res[j][0]:\n",
-    "\n",
-    "                    res[j] = (res[j][0],res[j][1]+1)\n",
-    "\n",
-    "    print(res)\n",
-    "```"
+    "````"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -383,5 +352,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
