--- a/notebooks/coding/Intro to Python/17_Matplotlib.ipynb
+++ b/notebooks/coding/Intro to Python/17_Matplotlib.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "(matplotlib_intro)=\n",
     "# Plotting data with Matplotlib\n",
-    "``` {index} Matplotlib plotting\n",
+    "``` {index} Matplotlib plotting (python)\n",
     "```\n",
     "``` {thebe-button} Tun on live code\n",
     "```\n",
@@ -33,28 +33,24 @@
     "Matplotlib functions usually return something, but in most cases you can have them as statements on their own as they update the object (plot) itself.\n",
     "\n",
     "## Useful graph generation functions:\n",
-    "- plt.plot(xdata, ydata, format, _kwargs_) - plots [point data](https://matplotlib.org/3.1.1/api/_as_gen/matplotlib.pyplot.plot.html#matplotlib.pyplot.plot) that can be either markers or joined by lines. The most commonly used graph type.\n",
-    "- plt.scatter(xdata, ydata, *kwargs*) - a [scatter plot](https://matplotlib.org/3.1.1/api/_as_gen/matplotlib.pyplot.scatter.html#matplotlib.pyplot.scatter) of ydata vs. xdata with varying marker size and/or colour.\n",
-    "- plt.hist(data, _kwargs_) - plots a [histogram](https://matplotlib.org/3.1.1/api/_as_gen/matplotlib.pyplot.hist.html#matplotlib.pyplot.hist), _kwargs_ include _bins_, i.e. the number of bins to use.\n",
+    "- `plt.plot(xdata, ydata, format, _kwargs_)` - plots [point data](https://matplotlib.org/3.1.1/api/_as_gen/matplotlib.pyplot.plot.html#matplotlib.pyplot.plot) that can be either markers or joined by lines. The most commonly used graph type.\n",
+    "- `plt.scatter(xdata, ydata, *kwargs*)` - a [scatter plot](https://matplotlib.org/3.1.1/api/_as_gen/matplotlib.pyplot.scatter.html#matplotlib.pyplot.scatter) of ydata vs. xdata with varying marker size and/or colour.\n",
+    "- `plt.hist(data, _kwargs_)` - plots a [histogram](https://matplotlib.org/3.1.1/api/_as_gen/matplotlib.pyplot.hist.html#matplotlib.pyplot.hist), `_kwargs_` include `_bins_`, i.e. the number of bins to use.\n",
     "\n",
     "## Graph decoration functions (used after graph generation function):\n",
-    "- plt.grid(_kwargs_) - creates gridlines, commonly used with plt.plot() type plots\n",
-    "- plt.legend(_kwargs_) - create a legend in the plot, keyword arguement _loc_ can determine legend's position, e.g. _plt.legend(loc=\"upper left\")_ or _plt.legend(loc=\"best\")_. For documentation check [here](https://matplotlib.org/3.1.1/api/_as_gen/matplotlib.pyplot.legend.html#matplotlib.pyplot.legend).\n",
-    "- plt.text(x, y, text, _kwargs_) - insert text at a specified position, _kwargs_ include _fontsize_, _style_, _weight_, _color_.\n",
-    "- plt.title(text, *kwargs*) - sets the title.\n",
-    "- plt.xlabel(text, *kwargs*) and plt.ylabel(text, *kwargs*) - sets x- and y-axis labels.\n",
-    "- plt.xlim(minx, maxx) and plt.ylim(miny, maxy) - sets x- and y-axis limits.\n",
+    "- `plt.grid(_kwargs_)` - creates gridlines, commonly used with plt.plot() type plots\n",
+    "- `plt.legend(_kwargs_)` - create a legend in the plot, keyword arguement `_loc_` can determine legend's position, e.g. `_plt.legend(loc=\"upper left\")_` or `_plt.legend(loc=\"best\")_`. For documentation check [here](https://matplotlib.org/3.1.1/api/_as_gen/matplotlib.pyplot.legend.html#matplotlib.pyplot.legend).\n",
+    "- `plt.text(x, y, text, _kwargs_)` - insert text at a specified position, `_kwargs_` include `_fontsize_`, `_style_`, `_weight_`, `_color_`.\n",
+    "- `plt.title(text, *kwargs*)` - sets the title.\n",
+    "- `plt.xlabel(text, *kwargs*)` and `plt.ylabel(text, *kwargs*)` - sets x- and y-axis labels.\n",
+    "- `plt.xlim(minx, maxx)` and `plt.ylim(miny, maxy)` - sets x- and y-axis limits.\n",
     "\n",
     "## Graph finalising function\n",
-    "- plt.show() - displays the graph\n",
+    "- `plt.show()` - displays the graph\n",
     "\n",
     "## Example plots\n",
     "(line_scatter)=\n",
-    "### Line and scatter data\n",
-    "```{index} Plots: line\n",
-    "```\n",
-    "```{index} Plots: scatter\n",
-    "```"
+    "### Line and scatter data"
    ]
   },
   {
@@ -291,9 +287,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
