--- a/notebooks/coding/Intro to Python/2_Variables.ipynb
+++ b/notebooks/coding/Intro to Python/2_Variables.ipynb
@@ -6,8 +6,6 @@
    "source": [
     "(variables)=\n",
     "# Variables\n",
-    "``` {index} Variables\n",
-    "```\n",
     "\n",
     "A variable is an object that contains an assigned value:"
    ]
@@ -38,17 +36,17 @@
     "(variable_types)=\n",
     "## Types of variables\n",
     "Common types of Python variables are:\n",
-    "- _str_ - string, e.g. \"Hello world!\"\n",
-    "- _int_ - integer numbers, e.g. 5\n",
-    "- _float_ - floating point numbers, e.g. 5.0, 5.2\n",
-    "- _bool_ - boolean value, i.e. True or False\n",
+    "- _str_ - string, e.g. `\"Hello world!\"`\n",
+    "- _int_ - integer numbers, e.g. `5`\n",
+    "- _float_ - floating point numbers, e.g. `5.0`, `5.2`\n",
+    "- _bool_ - boolean value, i.e. `True` or `False`\n",
     "\n",
-    "Integer and floating point numbers are different variables because of how a computer stores them. Computers use a discrete representation of numbers, which means that there is a gap between two adjacent numbers. For integers this gap is 1 and for floats it is much much smaller. For example, in integer arithmetic 0 and 0.999999 are the same numbers. We will therefore almost always use floating point numbers."
+    "Integer and floating point numbers are different types of variables and a computer stores them differently. Computers use a discrete representation of numbers, which means that there is a gap between two adjacent numbers. For integers this gap is 1 and for floats it is much much smaller. For example, in integer arithmetic 0 and 0.999999 are the same numbers. We will therefore almost always use floating point numbers."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -69,12 +67,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To check what type a variable is, we can use the in-built _type()_ function that takes the variable as an argument:"
+    "To check what type a variable is, we can use the in-built `type()` function that takes the variable as an argument:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -89,10 +87,10 @@
     }
    ],
    "source": [
-    "a = \"some text\"     # A string\n",
-    "b = 5               # An integer\n",
-    "c = 5.              # A float\n",
-    "d = True            # A boolean value\n",
+    "a = \"some text\"     # string\n",
+    "b = 5               # integer\n",
+    "c = 5.              # float\n",
+    "d = True            # boolean\n",
     "\n",
     "print(type(a))\n",
     "print(type(b)) \n",
@@ -112,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +160,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The position of the ball at time t = 0.30 s, is y = 3.31 m.\n"
+      "The position of the ball at time t = 0.30 s is y = 3.31 m.\n"
      ]
     }
    ],
@@ -171,7 +169,7 @@
     "g = 9.81   # m/s2\n",
     "t = 0.3    # s\n",
     "y = v0*t - 0.5*g*t**2\n",
-    "print(\"The position of the ball at time t = %.2f s, is y = %.2f m.\" % (t, y))"
+    "print(\"The position of the ball at time t = %.2f s is y = %.2f m.\" % (t, y))"
    ]
   },
   {
@@ -363,7 +361,7 @@
    "source": [
     "### Booleans\n",
     "\n",
-    "Booleans are objects in Python that are **True** or **False**. The simplest booleans are:"
+    "Booleans are objects in Python that are `True` or `False`. The simplest booleans are:"
    ]
   },
   {
@@ -390,12 +388,12 @@
    "metadata": {},
    "source": [
     "Objects can be compared to one another, where print statements will return True or False. Standard mathematical formulae in Boolean expressions are:\n",
-    "- $a = b$ is a == b\n",
-    "- $a \\neq b$ is a != b\n",
-    "- $a > b$ is a > b\n",
-    "- $a \\geq b$ is a >= b\n",
-    "- $a < b$ is a < b\n",
-    "- $a \\leq b$ is a <= b \n",
+    "- $a = b$ is `a == b`\n",
+    "- $a \\neq b$ is `a != b`\n",
+    "- $a > b$ is `a > b`\n",
+    "- $a \\geq b$ is `a >= b`\n",
+    "- $a < b$ is `a < b`\n",
+    "- $a \\leq b$ is `a <= b` \n",
     "\n",
     "An example use below:"
    ]
@@ -473,25 +471,28 @@
     "----------------\n",
     "\n",
     "* **Print** the value of the expression \\\\((a + b - c^4)  \\div  d \\\\) where\n",
-    "\\\\(a=1; b=4; c = 3; d =17\\\\), check the type of the expression."
+    "\\\\(a=1; b=4; c = 3; d =17\\\\). Check the type of the expression."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{admonition} Anwser\n",
+    "````{admonition} Answer\n",
     ":class: dropdown\n",
     "\n",
-    "    a = 1\n",
-    "    b = 4\n",
-    "    c, d = 3, 17\n",
+    "```python\n",
+    "a = 1\n",
+    "b = 4\n",
+    "c, d = 3, 17\n",
     "\n",
-    "    result = (a + b - c**4)/d\n",
+    "result = (a + b - c**4)/d\n",
     "\n",
-    "    print(result)\n",
-    "    print(type(result))\n",
-    "```"
+    "print(result)\n",
+    "print(type(result))\n",
+    "```\n",
+    "    \n",
+    "````"
    ]
   },
   {
@@ -499,20 +500,21 @@
    "metadata": {},
    "source": [
     "-----------\n",
-    "* **Integer division**: Very popular operators in Computer Science include integer division ( // ) and modulus operator ( \\% ). Think what operation combined with type casting can result in integer division. Check the working of your operator using the equality \\\\( div(a, b) * b + a \\% b = a\\\\)  "
+    "* **Integer division**: Very popular operators in computer science include integer (or *floor*) division `//` and modulus operator `%`. Think what operation combined with type casting can result in integer division. Check the working of your operator using the equality \\\\( div(a, b) * b + a \\% b = a\\\\)  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{admonition} Anwser\n",
+    "````{admonition} Answer\n",
     ":class: dropdown\n",
     "\n",
-    "    print(int(50/6)*6 + 50%6 == 50)\n",
+    "```python\n",
+    "print(50//6 * 6 + 50%6 == 50)\n",
+    "```\n",
     "\n",
-    "\n",
-    "```"
+    "````"
    ]
   },
   {
@@ -520,31 +522,34 @@
    "metadata": {},
    "source": [
     "_______\n",
-    "* **String slicing**: Set \\\\(a=\"Bananas\"\\\\) and \\\\(b=\"Apples\"\\\\): \n",
+    "* **String slicing**: Let `a=\"Bananas\"` and `b=\"Apples\"`: \n",
     "    - concatenate the strings\n",
     "    - take even characters from the resulting string\n",
     "    - take the last three characters\n",
     "\n",
-    "Print the intermediate results"
+    "Print the intermediate results."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{admonition} Anwser\n",
+    "````{admonition} Answer\n",
     ":class: dropdown\n",
     "\n",
-    "    a = \"Bananas\"\n",
-    "    b = \"Apples\"\n",
+    "```python\n",
+    "a = \"Bananas\"\n",
+    "b = \"Apples\"\n",
     "\n",
-    "    c = a + b\n",
-    "    print(c)\n",
-    "    c = c[::2]\n",
-    "    print(c)\n",
-    "    c = c[-3:]\n",
-    "    print(c)\n",
-    "```"
+    "c = a + b\n",
+    "print(c)\n",
+    "c = c[::2]\n",
+    "print(c)\n",
+    "c = c[-3:]\n",
+    "print(c)\n",
+    "```\n",
+    "\n",
+    "````"
    ]
   },
   {
@@ -552,42 +557,46 @@
    "metadata": {},
    "source": [
     "----------\n",
-    "* **Lorem Ipsum**: Count the number of 'l' characters in the following text (used to fill in empty text boxes in webpage development), then count the number of words:\n",
+    "* **Lorem Ipsum**: Count the number of 'l' characters in the following text (used as dummy text in web development), then count the number of words:\n",
     "\n",
     "*Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ultrices tempus faucibus. Mauris id porta turpis, a sodales leo. Nam fringilla dolor at tellus auctor, ut sollicitudin augue gravida. Proin vitae sem ligula. Suspendisse vel erat elit. Sed fringilla massa ut iaculis vestibulum. Fusce placerat est id felis semper facilisis.*\n",
     "\n",
-    "**HINT**: There is a space between any two words, you can do the maths!"
+    "**HINT**: There is whitespace between any two words!"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{admonition} Anwser \n",
+    "````{admonition} Anwser \n",
     ":class: dropdown\n",
     "\n",
-    "    a = \"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ultrices tempus faucibus. Mauris id porta turpis, a sodales leo. Nam fringilla dolor at tellus auctor, ut sollicitudin augue gravida. Proin vitae sem ligula. Suspendisse vel erat elit. Sed fringilla massa ut iaculis vestibulum. Fusce placerat est id felis semper facilisis.\"\n",
-    "    \n",
-    "    print(a.count('l'))\n",
-    "    print(a.count(' ') + 1)\n",
+    "```python\n",
+    "a = \"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ultrices tempus faucibus. Mauris id porta turpis, a sodales leo. Nam fringilla dolor at tellus auctor, ut sollicitudin augue gravida. Proin vitae sem ligula. Suspendisse vel erat elit. Sed fringilla massa ut iaculis vestibulum. Fusce placerat est id felis semper facilisis.\"\n",
     "\n",
+    "print(a.count('l'))\n",
+    "print(a.count(' ') + 1)  # number of words\n",
     "```\n",
-    "\n"
+    "\n",
+    "````"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* **Boolean shortcircuit**: Consider the following code:\n",
+    "* **Boolean short circuit**: Consider the following code:\n",
     "\n",
-    "        def f(a):\n",
-    "            a+=1\n",
-    "            return True\n",
+    "```python\n",
+    "def f(a):\n",
+    "    a += 1\n",
+    "    return True\n",
     "\n",
-    "        a = 0\n",
-    "        if( 1 > 2 or f(a)):\n",
-    "            print(a)\n",
+    "a = 0\n",
+    "if(1 > 2 or f(a)):\n",
+    "    print(a)\n",
+    "    \n",
+    "```\n",
     "        \n",
     "f defines an increment function, what will the programme print?"
    ]
@@ -596,13 +605,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{admonition} Anwser\n",
+    "```{admonition} Answer\n",
     ":class: dropdown\n",
     "\n",
     "0\n",
     "\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -625,5 +641,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
