--- a/notebooks/coding/Intro to Python/6_For_loops.ipynb
+++ b/notebooks/coding/Intro to Python/6_For_loops.ipynb
@@ -6,40 +6,55 @@
    "source": [
     "(for_loops)=\n",
     "# For loops\n",
-    "``` {index} Loops: for loop\n",
+    "``` {index} For loop (python)\n",
     "```\n",
-    "_For_ loops are used to iterate over elements in a list (or any other iterable structure). Iterating means looping over. The syntax for this type of loop is:\n",
+    "`for` loops are used to iterate over elements in a list (or any other iterable object). Iterating means looping over. The syntax for this type of loop is:\n",
     "\n",
+    "```python\n",
     "    for element in list:\n",
     "        # lines of code to be executed\n",
-    "        # more lines of code to be executed\n",
+    "```\n",
     "        \n",
     "The code will loop over all elements in the list and execute the same code for each of them. The code inside _for_ loop needs to be indented. For example:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 5, 7, 9, 11]\n",
+      "6\n",
+      "8\n",
+      "10\n",
+      "12\n",
+      "14\n",
+      "16\n",
+      "[1, 3, 5, 7, 9, 11]\n"
+     ]
+    }
+   ],
    "source": [
     "my_list = [1, 3, 5, 7, 9, 11]\n",
     "print(my_list)\n",
     "\n",
     "# For each element in my_list, add 5 and print it\n",
-    "\n",
     "for element in my_list:\n",
-    "    element = element + 5\n",
+    "    element += 5\n",
     "    print(element)\n",
     "\n",
-    "print(my_list) # The original list does not change"
+    "print(my_list)  # The original list does not change"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Apart from looping over elements, _for_ loops can be created for specified number of iterations using the _range()_ function. The syntax for _range()_ is:\n",
+    "Apart from looping over elements, _for_ loops can be created for specified number of iterations using the `range()` function, which returns an iterable object. The syntax for `range()` is:\n",
     "\n",
     "    range([start], stop, [step])\n",
     "    \n",
@@ -48,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -62,12 +77,10 @@
       "3\n",
       "4\n",
       "5\n",
-      "\n",
       "range(0, 6, 2)\n",
       "0\n",
       "2\n",
       "4\n",
-      "\n",
       "range(0, 6)\n",
       "0\n",
       "1\n",
@@ -75,7 +88,6 @@
       "3\n",
       "4\n",
       "5\n",
-      "\n",
       "range(6)\n",
       "0\n",
       "1\n",
@@ -88,38 +100,32 @@
    ],
    "source": [
     "print(\"range(0, 6, 1)\")\n",
-    "\n",
     "for i in range(0, 6, 1):\n",
     "    print(i)\n",
-    "\n",
     "    \n",
-    "print(\"\\nrange(0, 6, 2)\")\n",
-    "\n",
+    "print(\"range(0, 6, 2)\")\n",
     "for i in range(0, 6, 2):\n",
     "    print(i)\n",
     "    \n",
-    "print(\"\\nrange(0, 6)\")\n",
-    "\n",
+    "print(\"range(0, 6)\")\n",
     "for i in range(0, 6):\n",
     "    print(i)\n",
     "    \n",
-    "print(\"\\nrange(6)\")\n",
-    "\n",
+    "print(\"range(6)\")\n",
     "for i in range(6):\n",
-    "    print(i)\n",
-    "    "
+    "    print(i)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can generate an index with _range()_ function to loop over elements in a list:"
+    "We can generate an index with `range()` function to loop over elements in a list:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -135,8 +141,8 @@
     "my_list = [1, 3, 5, 7, 9, 11]\n",
     "print(my_list)\n",
     "\n",
-    "for i in range(len(my_list)): # Range from 0 to length of list\n",
-    "    my_list[i] *= 2 # Modify values in the list\n",
+    "for i in range(len(my_list)):  # Range from 0 to length of list\n",
+    "    my_list[i] *= 2  # Modify values in the list\n",
     "    \n",
     "print(my_list)    "
    ]
@@ -158,17 +164,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{admonition} Anwser\n",
+    "````{admonition} Answer\n",
     ":class: dropdown\n",
     "\n",
-    "    for temp_F in range(20, 81, 5):\n",
-    "    \n",
-    "        # Calculate the temperature in Celsius\n",
-    "        temp_C = 5./9.*(temp_F - 32)\n",
+    "```python\n",
+    "for temp_F in range(20, 81, 5):\n",
+    "    # Calculate the temperature in Celsius\n",
+    "    temp_C = 5./9.*(temp_F - 32)\n",
     "\n",
-    "        # Make a nicely formatted print statement\n",
-    "        print(\"%.2f degrees Fahrenheit is %.2f degrees Celsius.\" % (temp_F, temp_C))\n",
-    "```"
+    "    # Make a nicely formatted print statement\n",
+    "    print(\"%.2f degrees Fahrenheit is %.2f degrees Celsius.\" % (temp_F, temp_C))\n",
+    "```\n",
+    "\n",
+    "````"
    ]
   },
   {
@@ -176,7 +184,7 @@
    "metadata": {},
    "source": [
     "_____________\n",
-    "* **Triangles**: We want to create a triangle of numbers which looks as follows (for any given final integer \\\\(n\\\\)):\n",
+    "* **Triangles**: We want to create a triangle of \\\\(n\\\\) rows of numbers which looks as follows:\n",
     "\n",
     "        1\n",
     "        1 2\n",
@@ -191,21 +199,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{admonition} Anwser\n",
+    "````{admonition} Answer\n",
     ":class: dropdown\n",
     "\n",
-    "    n = 10\n",
-    "    l =[]   \n",
-    "    for i in range(1,n + 1):\n",
-    "    \n",
-    "        line =''\n",
-    "        for j in range(1,i+1):\n",
+    "```python\n",
+    "n = 10\n",
+    "   \n",
+    "for i in range(1,n + 1):\n",
+    "    line = ''  # empty string\n",
+    "    for j in range(1,i+1):\n",
+    "        line += str(j) + \" \"  # add a number and whitespace to the string\n",
     "\n",
-    "            line += str(j) + \" \"\n",
+    "    print(line)\n",
+    "```\n",
     "\n",
-    "        print(line)\n",
-    "```"
+    "````"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -228,5 +244,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
