--- a/notebooks/coding/Intro to Python/7_List_comprehensions.ipynb
+++ b/notebooks/coding/Intro to Python/7_List_comprehensions.ipynb
@@ -6,13 +6,15 @@
    "source": [
     "(list_comprehensions)=\n",
     "# List comprehensions\n",
-    "``` {index} Lists: list comprehensions\n",
+    "``` {index} List comprehensions (python)\n",
     "```\n",
     "List comprehensions are 'shortcuts' in creating lists using loops within one statement. The main advantage is that they are shorter to write. The syntax is:\n",
     "\n",
-    "    some_list = [ expression for item in some_iterable if condition]\n",
+    "```python\n",
+    "    some_list = [expression for item in iterable_object if condition]\n",
+    "```\n",
     "    \n",
-    "This will generate a list with an expression based on items in 'some_iterable', if the condition is met. The 'if' condition is optional."
+    "This will generate a list with an expression based on items in 'iterable_object', if the condition is met. The 'if' condition is optional."
    ]
   },
   {
@@ -34,10 +36,10 @@
    "source": [
     "# List comprehensions\n",
     "\n",
-    "normal_numbers = [ number for number in range(1, 20, 3)]\n",
+    "normal_numbers = [number for number in range(1, 20, 3)]\n",
     "print(normal_numbers)\n",
     "\n",
-    "cubic_numbers = [ number**3 for number in range(1, 20, 3)]\n",
+    "cubic_numbers = [number**3 for number in range(1, 20, 3)]\n",
     "print(cubic_numbers)\n",
     "\n",
     "# These are equivalent to \n",
@@ -86,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using 'if' condition:"
+    "Using `if` condition:"
    ]
   },
   {
@@ -109,13 +111,11 @@
     "# remainder from division by 2 is 1 (odd numbers)\n",
     "\n",
     "odd_numbers = [ number for number in range(20) if number%2 == 1]\n",
-    "\n",
     "print(odd_numbers)\n",
     "\n",
     "# Equivalent to\n",
     "\n",
     "odd_numbers = []\n",
-    "\n",
     "for number in range(20):\n",
     "    if number%2 == 1:\n",
     "        odd_numbers.append(number)\n",
@@ -130,22 +130,25 @@
     "(list_comprehensions_exercises)=\n",
     "## Exercises:\n",
     "_____________\n",
-    "* **Create a list comprehension** to find Celsius temperatures for Fahrenheit temperatures between 20\\\\(^\\circ\\\\)F and 80\\\\(^\\circ\\\\)F at 5\\\\(^\\circ\\\\)F increments. The Fahrenheit-Celsius conversion formula is:\n",
+    "* **Create a list comprehension** to find Celsius temperatures for Fahrenheit temperatures between \\\\(20^\\circ\\\\)F and \\\\(80^\\circ\\\\)F at \\\\(5^\\circ\\\\)F increments. The Fahrenheit-Celsius conversion formula is:\n",
     "\n",
-    "$$ T_{Celsius} = \\frac{5}{9}*(T_{Fahrenheit}-32) $$"
+    "\\\\[ T_{Celsius} = \\frac{5}{9}*(T_{Fahrenheit}-32) \\\\]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{admonition} Anwser\n",
+    "````{admonition} Answer\n",
     ":class: dropdown\n",
     "\n",
-    "    temp_C = [ 5./9.*(i-32) for i in range(20, 81, 5)]\n",
+    "```python\n",
+    "temp_C = [ 5./9.*(i-32) for i in range(20, 81, 5)]\n",
     "\n",
-    "    print(temp_C)\n",
-    "```"
+    "print(temp_C)\n",
+    "```\n",
+    "\n",
+    "````"
    ]
   },
   {
@@ -159,15 +162,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{admonition} Anwser\n",
+    "````{admonition} Answer\n",
     ":class: dropdown\n",
     "\n",
-    "    l = [2**x for x in range(40) if x % 2 == 1 and not(x % 3 == 0)]\n",
+    "```python\n",
+    "l = [2**x for x in range(40) if x % 2 == 1 and not(x % 3 == 0)]\n",
     "\n",
-    "    for i in l:\n",
-    "        print(i%10)\n",
-    "        \n",
-    "```"
+    "for i in l:\n",
+    "    print(i%10)  \n",
+    "```\n",
+    "\n",
+    "````"
    ]
   }
  ],
@@ -191,5 +196,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
