Minor changes, cleanout of the empty code boxes

--- a/notebooks/coding/Intro to Python/13_File_handling.ipynb
+++ b/notebooks/coding/Intro to Python/13_File_handling.ipynb
@@ -228,7 +228,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{admonition} Answer\n",
+    "````{admonition} Answer\n",
     ":class: dropdown\n",
     "\n",
     "```python\n",
@@ -237,7 +237,6 @@
     "        return False\n",
     "    else:\n",
     "        return country[-4::] == \"stan\"  # True or False\n",
-    "\n",
     "\n",
     "with open('Data\\\\TempData.txt', 'r') as file:  \n",
     "    lines = file.readlines()\n",
@@ -255,7 +254,7 @@
     "            res += nameTemp[i][1]\n",
     "            stan_countries += 1\n",
     "\n",
-    "print (res/stan_countries)\n",
+    "print(res/stan_countries)\n",
     "```\n",
     "\n",
     "````"
@@ -275,7 +274,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{admonition} Answer\n",
+    "````{admonition} Answer\n",
     ":class: dropdown\n",
     "\n",
     "```python\n",
@@ -307,7 +306,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{admonition} Answer\n",
+    "````{admonition} Answer\n",
     ":class: dropdown\n",
     "\n",
     "```python\n",
@@ -333,6 +332,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
