--- a/notebooks/coding/Intro to Python/16_Sets.ipynb
+++ b/notebooks/coding/Intro to Python/16_Sets.ipynb
@@ -94,7 +94,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{admonition} Answer\n",
+    "````{admonition} Answer\n",
     ":class: dropdown\n",
     "\n",
     "```python\n",
