--- a/notebooks/coding/Intro to Python/2_Variables.ipynb
+++ b/notebooks/coding/Intro to Python/2_Variables.ipynb
@@ -500,7 +500,7 @@
    "metadata": {},
    "source": [
     "-----------\n",
-    "* **Integer division**: Very popular operators in computer science include integer (or *floor*) division `//` and modulus operator `%`. Think what operation combined with type casting can result in integer division. Check the working of your operator using the equality \\\\( div(a, b) * b + a \\% b = a\\\\)  "
+    "* **Integer division**: Very popular operators in Computer Science include integer (or *floor*) division `//` and modulus operator `%`. Think what operation combined with type casting can result in integer division. Check the working of your operator using the equality \\\\( div(a, b) * b + a \\% b = a\\\\)  "
    ]
   },
   {
