--- a/notebooks/coding/Intro to Python/8_Nested_lists.ipynb
+++ b/notebooks/coding/Intro to Python/8_Nested_lists.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,12 @@
    ],
    "source": [
     "import random\n",
-    "random.seed(1)\n",
+    "\n",
+    "# setting a seed, which will print the same sequence of numbers \n",
+    "# every time \n",
+    "# USE FOR TESTING ONLY\n",
+    "# when done delete the following line!\n",
+    "random.seed(1)  \n",
     "\n",
     "a = 10\n",
     "i_map=[[random.randint(100,500) for i in range(a)] for j in range(a)]\n",
