--- a/notebooks/coding/Intro to Python/9_Handling_errors.ipynb
+++ b/notebooks/coding/Intro to Python/9_Handling_errors.ipynb
@@ -150,7 +150,7 @@
     "        l = [1, True, 4, \"blob\", \"boom\", 5, 6, print]\n",
     "```\n",
     "        \n",
-    "Compute the sum of the numerical element of the list (do not use the `type()` function!). Is the sum what you expected? Do you notice anything interesting regarding the boolean constants?\n",
+    "Compute the sum of the numerical elements of the list (do not use the `type()` function!). Is the sum what you expected? Do you notice anything interesting regarding the boolean constants?\n",
     "\n",
     "**HINT**: Consider using a `pass` statement in the `except` block which circumvents (*ignores*) the raised error and continues the execution."
    ]
